Fri Nov 18 17:35:09 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: add restriction to access the entried
	  command table and manipulate other IPs (for reason of security).
	  Now, a IP object can be controlled by only its master IP or the 
	  default IP. 

	* ext/tk/lib/remote-tk.rb: add restriction to manipulate.

	* ext/tk/tcltklib.c (ip_is_slave_of_p): add TclTkIp#slave_of?(ip) 
	  to check manipulability. 

	* ext/tk/lib/tk.rb: bug fix on handling of Tcl's namespaces.

	* ext/tk/lib/tk/namespace.rb: ditto.

Fri Nov 18 17:26:06 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (file_s_dirname): added checks for some patterns with drive
	  letter. fixed: [ruby-dev:27738]

	* test/ruby/test_path.rb (test_dirname): added tests for above
	  patterns.

Fri Nov 18 12:18:02 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* win32/win32.h (S_IFIFO): r,w = IO.pipe; r.stat.pipe? now
	  returns true on VisualC++6.

Wed Nov 16 23:24:17 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (static-ruby): overridable.

	* ext/extmk.rb (parse_args): force to link extensions statically only
	  if static is given for extstatic.

	* ext/extmk.rb (RUBY, RUBYW): overridable.

Tue Nov 15 23:46:35 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/find.rb (Find::find): should not ignore symbolic links to
	  non-existing files.  [ruby-talk:165866]

Tue Nov 15 16:23:26 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* array.c (rb_ary_fill): previous commit disabled this usage:

	    a = [0,1,2,3,4,5,6,7,8,9]
	    a.fill {|i| a[i] * 10} #=> [nil, nil, ...., nil]

	  previous commit has the advantage of early garbage collection, but
	  potensially this would break some script. so I reverted behavior.

Tue Nov 15 16:04:10 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* array.c (rb_ary_fill): tail elements were vanished when the middle
	  part of array was filled. (ie: [0,1,2,3,4].fill(-1,2,1) => [0,1,-1])
