@@ -2689,7 +2689,7 @@ rb_file_s_dirname(klass, fname)
     root = skiproot(name);
 #ifdef DOSISH_UNC
     if (root > name + 1 && isdirsep(*name))
-	name = root - 2;
+	root = skipprefix(name = root - 2);
 #else
     if (root > name + 1)
 	name = root - 1;
